kong/console-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: console
  namespace: console-system
  annotations:
    kubernetes.io/ingress.class: kong
    # konghq.com/override: https-upstream
    konghq.com/protocols: https
    konghq.com/https-redirect-status-code: "302" # redirect http -> https
  labels:
    app: console
spec:
  tls:
    - secretName: console-https-secret
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: console
                port:
                  name: https # must type port name of service

---
apiVersion: v1
kind: Service
metadata:
  name: console
  namespace: console-system
  annotations:
    kubernetes.io/ingress.class: kong
    konghq.com/override: https-upstream
    konghq.com/protocol: https
spec:
  type: LoadBalancer
  ports:
    - name: "https"
      port: 443
      targetPort: 443
    - name: "http"
      port: 80
      targetPort: 80
  selector:
    app: console
    hypercloud: ui
